--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-       <%- include('partials/navbar') %>  
+       <%- include('partials/mnavbar') %>  
        <div class="mainpage-intro">
            <div class="mainpage-intro__left">
                <h1>Learn</h1>
