--- a/views/allCourses.ejs
+++ b/views/allCourses.ejs
@@ -11,6 +11,8 @@
     .courseDiv {
         padding: 20x;
         display: flex;
+        flex-wrap: wrap;
+        flex-basis: 20%;
     }
 
     .courseBox {
