--- a/views/coursePage.ejs
+++ b/views/coursePage.ejs
@@ -27,12 +27,12 @@
                 title="YouTube video player" frameborder="0" allow="" allowfullscreen></iframe>
             <div style="width: 30%">
                 <h3 style="width: 26vw; margin: auto; margin-bottom: 20px;">After completing the course:</h3>
-                <div class="quiz">
-                    <p>Take Quiz 1</p>
-                </div>
-                <div class="quiz">
-                    <p>Take Quiz 2</p>
-                </div>
+                <a href = <%= "/quiz?cid="+course._id %> >
+                    <div class="quiz">
+                        <p>Take Quiz 1</p>
+                    </div>
+                </a>
+              
             </div>
         </div>
 
