--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,18 @@ body{
     background-color: #063c5ee7;
 }
 
+.standardBtnm{
+    width: 40%;
+    color: white;
+    background-color: #063C5E;
+    border: 0px solid transparent;
+    border-radius: 50px;
+    height: 2.25em;
+}
+.standardBtnm:hover{
+    background-color: #063c5ee7;
+}
+
 /* -------------------intro section--------------------- */
 
 .mainpage-intro{
@@ -132,4 +144,84 @@ body{
 
 .footer {
     height: 50vh;
+}
+
+.marks-div{
+    padding: 8rem;
+    border-radius: 10px;
+    background-color: white;
+    text-align: center;
+}
+
+.marks-div h2{
+    margin-bottom: 1rem;
+}
+
+.marks-div p{
+    margin-bottom: 1rem;
+}
+
+.marks-body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #063C5E;
+}
+
+/* --------------quiz page---------------- */
+
+.quiz-body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #063C5E;
+}
+
+.quiz-div{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    background-color: white;
+    width: 40%;
+    border-radius: 10px;
+}
+
+.quiz-div h2{
+    text-align: center;
+}
+
+.quiz-div p{
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.tmarks-body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #063C5E;
+}
+
+.tmarks-div{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    background-color: white;
+    width: 40%;
+    border-radius: 10px;
+    min-height: 50vh;
+}
+
+.tmarks-div p{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.tmarks-div h3{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
