--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -14,6 +14,8 @@
         padding: 20x;
         margin: 20px 0;
         display: flex;
+        flex-wrap: wrap;
+        flex-basis: 20%;
     }
 
     .courseBox {
@@ -50,7 +52,12 @@
         <!-- continue learning -->
         <div style="margin-top: 20px; margin-bottom: 20px;">
             <h2 style="margin-left: 20px">Continue learning</h2>
-            <div style="display: flex;">
+            <% if(enrolled.length == 0){%>
+                <div style="padding: 1rem; margin: 1rem; background-color: #fdd8d7; color: #ff353f; border-radius: 5px; border: 1px solid #ff353f;">
+                    <p>You haven't enrolled in any courses</p>
+                </div>
+            <%}else{ %> 
+            <div style="display: flex; flex-wrap: wrap; flex-basis: 20%;">
                 <% for( let i = 0; i < enrolled.length; i++ ) { %>
                 <a href="/coursePage?id=<%= enrolled[i]._id %> ">
                     <div class="courseDiv">
@@ -65,6 +72,7 @@
                 </a>
                 <% } %>
             </div>
+            <%}%>
 
         </div>
         <!-- Recommended for you -->
