--- a/views/teacherPage.ejs
+++ b/views/teacherPage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teacher page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <style>
@@ -29,13 +29,14 @@
 </style>
 <body>
     <%- include('partials/navbar') %> 
-    <div style="margin-top: 15vh; display: flex;">
+    <div style="margin-top: 10vh; display: flex;">
         <%- include('teacherSideBar') %> 
-        <div style="height: 85vh; width: 60vw; display: flex; justify-content: center; align-items: center;">
-           <div style="width: fit-content;">
-                <%- include('teacherProfile') %> 
-                <%- include('addCourse') %> 
-           </div>
+        <div style="padding-top: 2rem;height: 85vh; width: 75vw; overflow-y: scroll; padding-left: 10rem;">
+            <% if(query == "addcourse") {%>  
+                <%- include('addCourse') %>
+            <% }else if(query == "courses"){ %> 
+                <%- include('teacherCourses')  %> 
+            <%}%>
         </div>
     </div>
 </body>
